# YoloServer

./: .gitignore  CMakeLists.txt  main.cpp
inc/: LinuxPlayM4.h  UdpComm.h  base64.h  hcSDK.h  info.h  main.h  yolo.hh
src/: Base64.cpp  UdpComm.cpp  hcSDK.cpp  yolo.cc
